--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,8 @@ authors = [
 requires-python = ">=3.12"
 dependencies = [
     "datasets>=4.0.0",
+    "duckdb>=1.3.2",
+    "fire>=0.7.0",
     "loguru>=0.7.3",
     "pandas>=2.3.1",
     "torch>=2.7.1",
@@ -25,6 +27,7 @@ build-backend = "hatchling.build"
 
 [dependency-groups]
 dev = [
+    "huggingface-hub>=0.33.2",
     "marimo>=0.14.10",
     "notebook>=7.4.4",
 ]
